--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,2 +1,1 @@
-<a href="/search-subscribe?field_advert_bedrooms_value={{ bedrooms }}&field_advert_property_type_value={{ property_type }}"
-   class="use-ajax button" data-drupal-selector="edit-open-modal">Subscribe</a>
+<a href="" class="use-ajax button" data-drupal-selector="edit-open-modal">{{ button }}</a>
