--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,5 +1,5 @@
-<div class="alert alert-info" role="alert" id="search-subscribe-button-id">
+{#<div class="alert alert-info" role="alert" id="search-subscribe-button-id">#}
     {#<a href="#" class="alert-link">...</a>#}
     <strong>Dear visitor! </strong> Would you like to be save your search?
-    <a href="#" class="use-ajax button" data-drupal-selector="edit-open-modal">{{ button }}</a>
-</div>
+    <a href="#" class="use-ajax btn btn-success" data-drupal-selector="edit-open-modal">{{ button }}</a>
+{#</div>#}
