--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,5 +1,5 @@
 <div class="alert alert-info" role="alert" id="search-subscribe-button-id">
     {#<a href="#" class="alert-link">...</a>#}
     <strong>Dear visitor! </strong> Would you like to be save your search?
-    <a href="#" class="use-ajax btn btn-danger btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>
+    <a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>
 </div>
