--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,4 +1,4 @@
-<div class="alert alert-info row" role="alert" id="search-subscribe-button-id">
+<div class="alert alert-info" role="alert" id="search-subscribe-button-id">
     <strong>Dear visitor! </strong> Would you like to be save your search?
     <a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>
 </div>
