--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,7 +1,10 @@
-<div class="alert alert-info" role="alert" id="search-subscribe-button-id">
-    <strong>Dear visitor! </strong> Would you like to be save your search?
-    <a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>
+{#<div class="alert alert-info" role="alert" id="search-subscribe-button-id">#}
+    {#<strong>Dear visitor! </strong> Would you like to be save your search?#}
+    {#<a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>#}
+{#</div>#}
+<div class="alert alert-info" style="overflow:hidden" id="search-subscribe-button-id">
+    <p class="pull-left"><strong>Dear visitor! </strong> Would you like to be save your search?</p>
+    <a href="#" class="use-ajax btn btn-primary btn-sm pull-right" data-drupal-selector="edit-open-modal">{{ button }}</a>
 </div>
-
 {#<p class="bg-info" id="search-subscribe-button-id"><strong>Dear visitor! </strong> Would you like to be save your search?#}
     {#<a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a></p>#}
