--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,10 +1,4 @@
-{#<div class="alert alert-info" role="alert" id="search-subscribe-button-id">#}
-    {#<strong>Dear visitor! </strong> Would you like to be save your search?#}
-    {#<a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a>#}
-{#</div>#}
 <div class="alert alert-info" style="overflow:hidden" id="search-subscribe-button-id">
-    <p class="pull-left"><strong>Dear visitor! </strong> Would you like to be save your search?</p>
+    <p class="pull-left" style="line-height: 32px"><strong>Dear visitor! </strong> Would you like to be save your search?</p>
     <a href="#" class="use-ajax btn btn-primary btn-sm pull-right" data-drupal-selector="edit-open-modal">{{ button }}</a>
 </div>
-{#<p class="bg-info" id="search-subscribe-button-id"><strong>Dear visitor! </strong> Would you like to be save your search?#}
-    {#<a href="#" class="use-ajax btn btn-primary btn-sm" data-drupal-selector="edit-open-modal">{{ button }}</a></p>#}
