--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,5 +1,4 @@
 <div class="alert alert-info" style="overflow:hidden" id="search-subscribe-button-id">
-    <p class="pull-left" style="line-height: 32px"><strong><span class="glyphicon glyphicon-share"></span> Dear visitor!</strong> Would you like to be save your search?</p>
+    <p class="pull-left" style="line-height: 32px"><strong><span class="glyphicon glyphicon-share"></span> Dear visitor!</strong><a class="a2a_button_facebook">Tt</a> Would you like to be save your search?</p>
     <a href="#" class="use-ajax btn btn-primary btn-sm pull-right" data-drupal-selector="edit-open-modal">{{ button }}</a>
-    <a class="a2a_button_facebook"></a>
 </div>
