--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -600,18 +600,19 @@
                                     <br>Please find the latest adverts that may interest you.</p>
 
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                    {% for advert in adverts %}
-                                    <tr class="advert">
-                                        <td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">
-                                        </td>
-                                        <td id="detailsBlockId">
-                                            <p id="titleId"><a href="#">Dore title: </a> - Ref: <span>reference</span> - <span>Price</span>
-                                            </p>
-                                            <p>Gasabo, Kimironko</p>
-                                            <p>House for rent</p>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
+                                    {{ adverts }}
+                                    {#{% for advert in adverts %}#}
+                                    {#<tr class="advert">#}
+                                        {#<td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">#}
+                                        {#</td>#}
+                                        {#<td id="detailsBlockId">#}
+                                            {#<p id="titleId"><a href="#">Dore title: {{ json }}</a> - Ref: <span>reference</span> - <span>Price</span>#}
+                                            {#</p>#}
+                                            {#<p>Gasabo, Kimironko</p>#}
+                                            {#<p>House for rent</p>#}
+                                        {#</td>#}
+                                    {#</tr>#}
+                                    {#{% endfor %}#}
                                 </table>
                             </div>
                             <!-- // END MODULE: BODY CONTENT -->
