--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -600,7 +600,7 @@
                                     <br>Please find the latest adverts that may interest you.</p>
 
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                    {{ render(adverts) }}
+                                    {{ adverts }}
                                     {#{% for advert in adverts %}#}
                                     {#<tr class="advert">#}
                                         {#<td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">#}
