--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -605,7 +605,7 @@
                                         <td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">
                                         </td>
                                         <td id="detailsBlockId">
-                                            <p id="titleId"><a href="#">Dore title: {{ advert|json_encode(constant('JSON_PRETTY_PRINT')) }}</a> - Ref: <span>reference</span> - <span>Price</span>
+                                            <p id="titleId"><a href="#">Dore title: {{ advert }}</a> - Ref: <span>reference</span> - <span>Price</span>
                                             </p>
                                             <p>Gasabo, Kimironko</p>
                                             <p>House for rent</p>
