--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -605,9 +605,9 @@
                                         <td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">
                                         </td>
                                         <td id="detailsBlockId">
-                                            <p id="titleId"><a href="#">{{ advert.title.value }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }}</span>
+                                            <p id="titleId"><a href="#">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|capitalize }}</span>
                                             </p>
-                                            <p>Gasabo, Kimironko</p>
+                                            <p>{{ advert.field_advert_district.entity.name.value }}, Kimironko</p>
                                             <p>{{ advert.field_advert_property_type.value }} for {{ advert.field_advert_type.value }}</p>
                                         </td>
                                     </tr>
