--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -1,6 +1,8 @@
-{#[DISPLAY]#}
+<!-- TEMPLATE_START -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:v="urn:schemas-microsoft-com:vml"
+      xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
     <!-- This is a simple example template that you can edit to create your own custom templates -->
     <!--[if gte mso 15]>
@@ -659,4 +661,4 @@
 </center>
 </body>
 </html>
-{#[/DISPLAY]#}
+<!-- TEMPLATE_END -->
