--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -1,22 +1,22 @@
 <!-- RIR_CAMPAIGN_TEMPLATE -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:v="urn:schemas-microsoft-com:vml"
-      xmlns:o="urn:schemas-microsoft-com:office:office">
-<head>
-    <!-- This is a simple example template that you can edit to create your own custom templates -->
-    <!--[if gte mso 15]>
-    <xml>
-        <o:OfficeDocumentSettings>
-            <o:AllowPNG />
-            <o:PixelsPerInch>96</o:PixelsPerInch>
-        </o:OfficeDocumentSettings>
-    </xml>
-    <![endif]-->
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newsletter</title>
+{#<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">#}
+{#<html xmlns="http://www.w3.org/1999/xhtml"#}
+      {#xmlns:v="urn:schemas-microsoft-com:vml"#}
+      {#xmlns:o="urn:schemas-microsoft-com:office:office">#}
+{#<head>#}
+    {#<!-- This is a simple example template that you can edit to create your own custom templates -->#}
+    {#<!--[if gte mso 15]>#}
+    {#<xml>#}
+        {#<o:OfficeDocumentSettings>#}
+            {#<o:AllowPNG />#}
+            {#<o:PixelsPerInch>96</o:PixelsPerInch>#}
+        {#</o:OfficeDocumentSettings>#}
+    {#</xml>#}
+    {#<![endif]-->#}
+    {#<meta charset="UTF-8">#}
+    {#<meta http-equiv="x-ua-compatible" content="IE=edge">#}
+    {#<meta name="viewport" content="width=device-width, initial-scale=1">#}
+    {#<title>Newsletter</title>#}
 
     <style type="text/css">
         p{
@@ -521,7 +521,8 @@
                 /*@editable*/line-height:150% !important;
             }
 
-        }</style></head>
+        }</style>
+{#</head>#}
 <body>
 <center>
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" id="bodyTable" style="height:100%;">
