--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -605,7 +605,12 @@
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                     {% for advert in adverts %}
                                     <tr class="advert">
-                                        <td id="imageBlockId"><img src="https://s3.eu-central-1.amazonaws.com/rirbucket/images/teal-house-md.png" style="max-width:90px;" class="templateImage" alt="teal-house-md.png">
+                                        <td id="imageBlockId">
+                                            {% if advert.field_advert_picture.0.entity.uri.value is not empty %}
+                                                <img src="{{ file_url(advert.field_advert_picture.0.entity.uri.value) }}" style="width:90px; height: auto" class="templateImage" alt="advertImage">
+                                            {% else %}
+                                                <img src="{{ file_url('public://default_images/no_img.png') }}" style="width:90px; height: auto" class="templateImage" alt="advertImage">
+                                            {% endif %}
                                         </td>
                                         <td id="detailsBlockId">
                                             <p id="titleId"><a href="#">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|capitalize }}</span>
