--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -606,8 +606,8 @@
                                     {% for advert in adverts %}
                                     <tr class="advert">
                                         <td id="imageBlockId">
-                                            {% if advert.field_advert_picture.0.entity.uri.value is not empty %}
-                                                <img src="{{ file_url(advert.field_advert_picture.0.entity.uri.value) }}" style="width:90px; height: auto" class="templateImage" alt="advertImage">
+                                            {% if advert.field_advert_picture is not empty %}
+                                                <img src="{{ drupal_field('field_advert_picture', 'advert', 1)|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage">
                                             {% else %}
                                                 <img src="{{ 'public://default_images/no_img.png'|image_style('scaled_90x90')}}" style="width:90px; height: auto" class="templateImage" alt="noImage">
                                             {% endif %}
