--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -607,7 +607,7 @@
                                     <tr class="advert">
                                         <td id="imageBlockId">
                                             {% if advert.field_advert_picture is not empty %}
-                                                <img src="{{ file_url(advert.field_advert_picture.0.entity.uri.value) }}" style="width:90px; height: auto" class="templateImage" alt="advertImage">
+                                                <img src="{{ file_url(advert.field_advert_picture.0.entity.fileuri) }}" style="width:90px; height: auto" class="templateImage" alt="advertImage">
                                             {% else %}
                                                 <img src="{{ file_url('public://default_images/no_img.png') }}" style="width:90px; height: auto" class="templateImage" alt="noImage">
                                             {% endif %}
