--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -585,7 +585,7 @@
                     <tr>
                         <td valign="top" id="templateHeader">
                             <!-- BEGIN MODULE: HEADER IMAGE // -->
-                            <img src="https://s3.eu-central-1.amazonaws.com/jirbucket/banners/job_in_rwanda_our_partners-02.jpg" style="max-width:564px;" class="templateImage" alt="job_in_rwanda_our_partners-02.jpg">
+                            <img src="{{ 'https://s3.eu-central-1.amazonaws.com/jirbucket/banners/job_in_rwanda_our_partners-02.jpg'|image_style('email_banner') }}" class="templateImage" alt="email_banner">
                             <!-- // END MODULE: HEADER IMAGE -->
                         </td>
                     </tr>
@@ -614,9 +614,9 @@
                                         </td>
                                         <td id="detailsBlockId">
                                             <p id="titleId"><a href="#">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|upper }}</span>
-                                            </p>
-                                            <p>{{ advert.field_advert_district.entity.name.value }}, Kimironko</p>
-                                            <p>{{ advert.field_advert_property_type.value|capitalize }} for {{ advert.field_advert_type.value|capitalize }}</p>
+                                            <br/>
+                                            {{ advert.field_advert_district.entity.name.value }}, Kimironko<br/>
+                                            {{ advert.field_advert_property_type.value|capitalize }} for {{ advert.field_advert_type.value|capitalize }}</p>
                                         </td>
                                     </tr>
                                     {% endfor %}
