--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -585,7 +585,7 @@
                     <tr>
                         <td valign="top" id="templateHeader">
                             <!-- BEGIN MODULE: HEADER IMAGE // -->
-                            <img src="{{ 'https://s3.eu-central-1.amazonaws.com/jirbucket/banners/job_in_rwanda_our_partners-02.jpg'|image_style('email_banner') }}" class="templateImage" alt="email_banner">
+                            <img src="{{ drupal_token('site:url') ~ 'public://default_images/email_banner.jpg'|image_style('email_banner') }}" class="templateImage" alt="email_banner">
                             <!-- // END MODULE: HEADER IMAGE -->
                         </td>
                     </tr>
