--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -613,7 +613,7 @@
                                             {% endif %}
                                         </td>
                                         <td id="detailsBlockId">
-                                            <p id="titleId"><a href="#">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|upper }}</span>
+                                            <p id="titleId"><a href="{{ path('entity.node.canonical', {'node':advert.id}) }}">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|upper }}</span>
                                             <br/>
                                             {{ advert.field_advert_district.entity.name.value }}, Kimironko<br/>
                                             {{ advert.field_advert_property_type.value|capitalize }} for {{ advert.field_advert_type.value|capitalize }}</p>
