--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -612,7 +612,7 @@
                                                 <img src="{{ drupal_token('site:url') ~ 'public://default_images/no_img.png'|image_style('scaled_90x90') }}" class="templateImage" alt="noImage">
                                             {% endif %}
                                         </td>
-                                        <td id="detailsBlockId">
+                                        <td id="detailsBlockId" style="padding-left: 10px">
                                             <p id="titleId"><a href="{{ path('entity.node.canonical', {'node':advert.id}) }}">{{ advert.title.value|capitalize }}</a> - Ref: <span>{{ advert.field_advert_reference.value }}</span> - <span>{{ advert.field_advert_price.value }} {{ advert.field_advert_currency.value|upper }}</span>
                                             <br/>
                                             {{ advert.field_advert_district.entity.name.value }}, Kimironko<br/>
