--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -549,7 +549,7 @@
                         <td valign="top" id="templateBody">
                             <!-- BEGIN MODULE: BODY CONTENT // -->
                             <div class="body_content">
-                                <h3>Our latest properties</h3>
+                                <h3>Interesting adverts from {{ drupal_token('site:name') }}</h3>
                                 <p><strong>Dear *|FNAME|*, </strong>
                                     <br>Please find the latest properties that may interest you.</p>
 
