--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,6 +1,6 @@
-<div class="alert alert-info" style="overflow:hidden" id="search-subscribe-button-id">
-    <p class="pull-left" style="line-height: 32px"><strong><span class="glyphicon glyphicon-info-sign"></span> Dear visitor!</strong> Would you like to save your search?</p>
-    <a href="#" class="use-ajax btn btn-primary btn-sm pull-right" data-drupal-selector="edit-open-modal">
+<div class="alert alert-success" style="overflow:hidden" id="search-subscribe-button-id">
+    <p class="pull-left" style="line-height: 32px"><strong><span class="glyphicon glyphicon-bell" aria-hidden="true"></span> Dear visitor!</strong> Would you like to save your search?</p>
+    <a href="#" class="use-ajax btn btn-warning btn-sm pull-right" data-drupal-selector="edit-open-modal">
         <span class="glyphicon glyphicon-share"></span> {{ button }}
     </a>
 </div>
