--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -551,7 +551,7 @@
                             <div class="body_content">
                                 <h3>Interesting adverts from {{ drupal_token('site:name') }}</h3>
                                 <p><strong>Dear *|FNAME|*, </strong>
-                                    <br>Please find the latest properties that may interest you.</p>
+                                    <br>You receive this email because you have subscribed to alerts from {{ drupal_token('site:url') }}. Please find below the latest properties matching your selection:</p>
 
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                     {% for advert in adverts %}
