--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -1,5 +1,9 @@
 <div class="alert alert-info" style="overflow:hidden" id="search-subscribe-button-id">
-    <p class="pull-left" style="line-height: 32px"><strong><span class="glyphicon glyphicon-bell" aria-hidden="true"></span> Dear visitor!</strong> Would you like to save your search?</p>
+    <p class="pull-left" style="line-height: 32px">
+        <strong>
+            <span class="glyphicon glyphicon-bell" aria-hidden="true"></span> Dear visitor!
+        </strong> Subscribe to our free email alert to receive properties matching your search options through your email address?
+    </p>
     <a href="#" class="use-ajax btn btn-warning btn-sm pull-right" data-drupal-selector="edit-open-modal">
         <span class="glyphicon glyphicon-share"></span> {{ button }}
     </a>
