--- a/templates/hir-expiring-adverts.html.twig
+++ b/templates/hir-expiring-adverts.html.twig
@@ -25,6 +25,7 @@
         <tr>
             <td>{{ loop.index }}</td>
             <td><a href="{{ drupal_token('site:url') ~ path('entity.node.canonical', {'node':advert.id}) }}">{{ advert.title.value }}</a></td>
+            {# Split key into 2 and take the second part #}
             {% set index = key|split('_', 2) %}
             <td>{{ index[1] }}</td>
             <td>{{ advert.field_visit_contact_name.value }} <br>
