--- a/templates/hir-expiring-adverts.html.twig
+++ b/templates/hir-expiring-adverts.html.twig
@@ -17,7 +17,7 @@
             <th>#</th>
             <th>Title</th>
             <th>Number of views</th>
-            <th>Contact persone</th>
+            <th>Contact person</th>
         </tr>
         </thead>
         <tbody>
