--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -559,7 +559,7 @@
                                         <td id="imageBlockId">
                                             {% if cdn_enabled == 1 %}
                                                 {% if advert.field_advert_picture is not empty %}
-                                                    <img src="{{ 'http:' ~ cdn_domain ~ advert.field_advert_picture.0.entity.uri.value|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage" />
+                                                    <img src="{{ cdn_domain ~ advert.field_advert_picture.0.entity.uri.value|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage" />
                                                 {% else %}
                                                     <img src="{{ 'public://default_images/no_img.png'|image_style('scaled_90x90') }}" class="templateImage" alt="noImage" />
                                                 {% endif %}
