--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -534,12 +534,12 @@
                         <td align="center" valign="top" width="600" style="width:600px;">
                 <![endif]-->
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="templateContainer">
-
+                    {% set protocol = cdn_enabled == 1 ? 'http:' : '' %}
                     <!-- BEGIN HEADER // -->
                     <tr>
                         <td valign="top" id="templateHeader">
                             <!-- BEGIN MODULE: HEADER IMAGE // -->
-                            <img src="{{ 'http:' ~ 'public://default_images/email_banner.png'|image_style('email_banner') }}" class="templateImage" alt="email_banner">
+                            <img src="{{ protocol ~ 'public://default_images/email_banner.png'|image_style('email_banner') }}" class="templateImage" alt="email_banner">
                             <!-- // END MODULE: HEADER IMAGE -->
                         </td>
                     </tr>
