--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -557,18 +557,10 @@
                                     {% for advert in adverts %}
                                     <tr class="advert">
                                         <td id="imageBlockId">
-                                            {% if cdn_enabled == 1 %}
-                                                {% if advert.field_advert_picture is not empty %}
-                                                    <img src="{{ 'http:' ~ advert.field_advert_picture.0.entity.uri.value|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage" />
-                                                {% else %}
-                                                    <img src="{{ 'public://default_images/no_img.png'|image_style('scaled_90x90') }}" class="templateImage" alt="noImage" />
-                                                {% endif %}
+                                            {% if advert.field_advert_picture is not empty %}
+                                                <img src="{{ protocol ~ advert.field_advert_picture.0.entity.uri.value|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage" />
                                             {% else %}
-                                                {% if advert.field_advert_picture is not empty %}
-                                                    <img src="{{ drupal_token('site:url') ~ advert.field_advert_picture.0.entity.uri.value|image_style('scaled_90x90') }}" class="templateImage" alt="advertImage">
-                                                {% else %}
-                                                    <img src="{{ drupal_token('site:url') ~ 'public://default_images/no_img.png'|image_style('scaled_90x90') }}" class="templateImage" alt="noImage">
-                                                {% endif %}
+                                                <img src="{{ protocol ~ 'public://default_images/no_img.png'|image_style('scaled_90x90') }}" class="templateImage" alt="noImage" />
                                             {% endif %}
                                         </td>
                                         <td id="detailsBlockId" style="padding-left: 10px">
