--- a/templates/rir-subscribe-search.html.twig
+++ b/templates/rir-subscribe-search.html.twig
@@ -7,4 +7,5 @@
     <a href="#" class="use-ajax btn btn-warning btn-sm pull-right" data-drupal-selector="edit-open-modal">
         <span class="glyphicon glyphicon-share"></span> {{ button }}
     </a>
+    <a class="use-ajax" data-dialog-type="modal" href="/form/notification-subscription">Contact US</a>
 </div>
