--- a/templates/rir-campaign.html.twig
+++ b/templates/rir-campaign.html.twig
@@ -550,7 +550,7 @@
                             <!-- BEGIN MODULE: BODY CONTENT // -->
                             <div class="body_content">
                                 <h3>Interesting adverts from {{ drupal_token('site:name') }}</h3>
-                                <p><strong>Dear *|FNAME|*, </strong>
+                                <p><strong>Dear {{ name }}, </strong>
                                     <br>You receive this email because you have subscribed to alerts from {{ drupal_token('site:url') }}. Please find below the latest properties matching your selection:</p>
 
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -594,9 +594,7 @@
                                 <tr>
                                     <td valign="top" id="utilityBar">
                                         <div class="utility_bar">
-                                            <a href="*|UNSUB|*" class="utilityLink">unsubscribe from this list</a><span class="mobileHide"> | </span><a href="*|UPDATE_PROFILE|*" class="utilityLink">update subscription preferences</a>
-                                            <!-- *|IFNOT:ARCHIVE_PAGE|* --><span class="mobileHide"> | </span><a href="*|ARCHIVE|*" class="utilityLink">view email in browser</a>
-                                            <!-- *|END:IF|* -->
+                                            <a href="*|UNSUB|*" class="utilityLink">unsubscribe from this list</a>
                                         </div>
                                     </td>
                                 </tr>
