--- a/templates/hir-campaign-adverts.html.twig
+++ b/templates/hir-campaign-adverts.html.twig
@@ -117,7 +117,7 @@
         </tr>
         <tr>
             <td class="tg-0pky" colspan="2">
-                <small><i>Not looking for properties anymore?</i> <a href="{{ drupal_token('site:url') }}/unsubscription/{{ sid }}">Unsubscribe here</a></small>
+                <small><i>Not looking for properties anymore?</i> <a href="{{ drupal_token('site:url') }}/unsubscribe/{{ sid }}">Unsubscribe here</a></small>
             </td>
         </tr>
     </table>
