--- a/templates/hir-campaign-adverts.html.twig
+++ b/templates/hir-campaign-adverts.html.twig
@@ -103,7 +103,7 @@
                         {{ advert.field_advert_district.entity.name.value }}, {{ advert.field_advert_sector.value }}
                         <br/>
                         {{ advert.field_advert_property_type.value|capitalize }}
-                        for {{ advert.field_advert_type|field_label }}, {{ advert.field_advert_type|field_raw }}
+                        for {{ advert.field_advert_type.value|field_label }}, {{ advert.field_advert_type.value|field_raw }}
                     </p>
                 </td>
             </tr>
