--- a/templates/hir-campaign-adverts.html.twig
+++ b/templates/hir-campaign-adverts.html.twig
@@ -85,6 +85,10 @@
             </td>
         </tr>
         {% for advert in adverts %}
+            {% if advert.field_advert_type.value == 'buy' %}
+                {% set advert.field_advert_type.value = 'sale' %}
+            {% endif %}
+
             <tr>
                 <td class="tg-0pky">
                     {% if advert.field_advert_picture is not empty %}
@@ -103,7 +107,7 @@
                         {{ advert.field_advert_district.entity.name.value }}, {{ advert.field_advert_sector.value }}
                         <br/>
                         {{ advert.field_advert_property_type.value|capitalize }}
-                        for {{ advert.field_advert_type|field_label }}, {{ advert.field_advert_type|raw }}
+                        for {{ advert.field_advert_type.value|capitalize }}
                     </p>
                 </td>
             </tr>
